# nix-templates

./: flake.nix
template/python/: .gitignore  flake.nix  pyproject.toml
